# web-bean

./: Cargo.toml
examples/: http_demo.rs  http_demo1.rs  http_demo2.rs  http_demo3.rs  http_demo4.rs  http_demo5.rs  http_server.rs
html/: index.html
src/: entry.rs  lib.rs  main.rs
